[package]
name = "rustyline-async"
version = "0.4.3"
license = "Unlicense"
description = "A minimal readline with multiline and async support."
documentation = "https://docs.rs/rustyline-async"
repository = "https://github.com/zyansheep/rustyline-async"
readme = "README.md"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["io"] }
pin-project = "1.0"
thingbuf = "0.1"
thiserror = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = [ "unstable", "attributes" ] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
simplelog = "0.12.1"

[features]
default = ["emacs"]
emacs = []
