[package]
name = "rustyline-async"
version = "0.4.5"
license = "Unlicense"
description = "A minimal readline with multiline and async support."
documentation = "https://docs.rs/rustyline-async"
repository = "https://github.com/zyansheep/rustyline-async"
readme = "README.md"
edition = "2021"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", features = ["io"] }
pin-project = "1.1"
thingbuf = "0.1"
thiserror = "2.0.12"
unicode-segmentation = "1.12"
unicode-width = "0.2.0"

[dev-dependencies]
async-std = { version = "1.13.1", features = ["unstable", "attributes"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.27"
simplelog = "0.12.2"

[features]
default = ["emacs"]
emacs = []
