[package]
name = "test-printing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
log = "0.4.16"
rustyline-async = { version = "0.2.0", path = "../.." }
simplelog = "0.11.2"

[features]
